<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#aa000000" >


    <Button
        android:id="@+id/button_dojo"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/dojo" />
    

    <Button
        android:id="@+id/button_arena"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_dojo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/arena" />

    <Button
        android:id="@+id/button_friends"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_arena"
        android:layout_centerHorizontal="true"
		android:background="#ffffffff"
        android:layout_marginTop="40dp"
        android:text="@string/friends" />

    <Button
        android:id="@+id/button_stats"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_friends"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/view_stats" />

	<TextView
        android:id="@+id/textView1"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/tut_friends1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:gravity="center" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_dojo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/tut_friends2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:text="@string/tap"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>